--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    android:orientation="vertical"
     tools:context="com.sunny.www.compass.MainActivity">
-
-    <com.sunny.www.compass.view.CompassView
-        android:id="@+id/compass"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_centerInParent="true" />
 
     <TextView
         android:id="@+id/tv_dir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="38dp"
         android:textColor="@color/white"
         android:textSize="30sp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="65dp"
-        tools:text="@string/app_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        tools:text="@string/app_name" />
 
-</RelativeLayout>
+    <com.sunny.www.compass.view.CompassView
+        android:id="@+id/compass"
+        android:layout_marginTop="6dp"
+        android:layout_width="match_parent"
+        android:layout_height="380dp" />
+
+</LinearLayout>
