--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     tools:context="com.sunny.www.compass.MainActivity">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="12dp" />
+
     <TextView
         android:id="@+id/tv_dir"
         android:layout_width="wrap_content"
@@ -19,8 +23,8 @@
 
     <com.sunny.www.compass.view.CompassView
         android:id="@+id/compass"
-        android:layout_marginTop="6dp"
         android:layout_width="match_parent"
-        android:layout_height="380dp" />
+        android:layout_height="380dp"
+        android:layout_marginTop="32dp" />
 
 </LinearLayout>
