--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,8 @@
         android:layout_height="380dp"
         android:layout_marginTop="32dp" />
 
+    <TextView
+        android:id="@+id/tv_lon_lat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
