--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_vertical"
     android:background="@color/black"
-    android:orientation="vertical"
     tools:context="com.sunny.www.compass.MainActivity">
 
     <TextView
         android:id="@+id/tv_dir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="38dp"
-        android:textColor="@color/white"
+        android:layout_marginTop="40dp"
         android:textSize="30sp"
         tools:text="@string/app_name" />
 
@@ -22,12 +20,26 @@
         android:id="@+id/compass"
         android:layout_width="match_parent"
         android:layout_height="380dp"
-        android:layout_marginTop="32dp" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="120dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:layout_above="@id/ll_info"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/shape_gradient_grey_linear" />
 
     <LinearLayout
+        android:id="@+id/ll_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="40dp"
         android:baselineAligned="false"
         android:orientation="horizontal"
         android:paddingStart="30dp"
@@ -43,12 +55,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/latitude" />
+                android:text="@string/latitude"
+                android:textColor="#D9D9D9"
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/tv_lon"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:textColor="#F7F7F7"
+                android:textSize="13sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -61,12 +78,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/longitude" />
+                android:text="@string/longitude"
+                android:textColor="#D9D9D9"
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/tv_lat"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:textColor="#F7F7F7"
+                android:textSize="13sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -79,13 +101,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/speed" />
+                android:text="@string/speed"
+                android:textColor="#D9D9D9"
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/tv_speed"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:textColor="#F7F7F7"
+                android:textSize="13sp" />
         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
