--- a/app/src/main/res/drawable/shape_gradient_grey_linear.xml
+++ b/app/src/main/res/drawable/shape_gradient_grey_linear.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:centerColor="#1E1E1E"
-        android:endColor="#0F0F0F"
-        android:startColor="#0F0F0F"
+        android:centerColor="#333333"
+        android:endColor="#111111"
+        android:startColor="#111111"
         android:type="linear" />
 </shape>
