优化有时取不到定位问题 添加海拔数据显示

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,18 +96,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/speed"
+                android:text="@string/altitude"
                 android:textColor="#CCCCCC"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/tv_speed"
+                android:id="@+id/tv_altitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
